src/test/error/samevar.c
int main() {
    int a;
    int a;
    fun();
}
int fun() {
    int b; int b;
}